...
                              fontSize: 20),
                        ),
                      ),
                      Padding(
                        padding: const EdgeInsets.fromLTRB(55, 10, 55, 0),
                        child: TextField(
                          key: Key('email'),
                          obscureText: false,
                          enableSuggestions: true,
                          autocorrect: false,
                          style: TextStyle(fontSize: 15),
                          decoration: InputDecoration(
                              fillColor: Colors.white,
...
                              fontSize: 20),
                        ),
                      ),
                      Padding(
                        padding: const EdgeInsets.fromLTRB(55, 10, 55, 0),
                        child: TextField(
                          key: const Key('password'),
                          obscureText: true,
                          enableSuggestions: false,
                          autocorrect: false,
                          style: TextStyle(fontSize: 15),
                          decoration: InputDecoration(
                              fillColor: Colors.white,
...
                        ),
                      Padding(
                        padding: const EdgeInsets.only(top: 25, bottom: 200),
                        child: Container(
                          alignment: Alignment.center,
                          child: ElevatedButton(
                              key: Key("loginButton"),
                              onPressed: () {
                                if (emailController.text == '' ||
                                    passController.text == '') {
                                  showToast('Please Fill Out Fields!');
                                  return;
                                }
...
