...
  @override
  State<Dropdown> createState() => _DropdownState();
}

class TopBar extends StatelessWidget {
  final User user;
  const TopBar({Key? key, required this.user}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return Container(
      height: 100,
      color: const Color.fromRGBO(4, 31, 81, 1),
...
                    )),
              ),
              SizedBox(
                width: 60,
              ),
              InkWell(
                key: const Key("TopbarJobListing"),
                onTap: () async {
                  await Navigator.push(
              context,
              MaterialPageRoute(
                  builder: (context) => jobListingView(
                        user: user,
...
