...
                            color: Color.fromARGB(255, 229, 0, 0),
                            fontSize: 24,
                            fontWeight: FontWeight.w700),
                      ),
                    ),
                    ElevatedButton(
                      key: Key("Request Job"),
                      onPressed: requestJob,
                      child: Text(
                        "Request Job",
                        style: TextStyle(color: Colors.white, fontSize: 24),
                      ),
                      style: ButtonStyle(
...
